--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
   "name": "Withboard Display",
   "short_name": "Withboard",
-  "description": "[NOT WHAT YOU ARE LOOKING FOR] Launches a new Withboard display as a window or kiosk view",
-  "version": "0.2.9",
+  "description": "Launches a new Scopely Withboard display as a window or kiosk view",
+  "version": "0.3.0",
   "minimum_chrome_version": "38",
 
   "kiosk_enabled" : true,
@@ -15,7 +15,9 @@
 
   "permissions": [
     "power",
+    "system.cpu",
     "system.display",
+    "system.memory",
     "webview",
     "audioCapture",
     "videoCapture",
